@@ -116,6 +116,10 @@ enum guCommandIds {
     ID_MAINFRAME_SELECT_ALBUMNAME,
     ID_MAINFRAME_SELECT_ARTIST,
     ID_MAINFRAME_SELECT_ARTISTNAME,
+    ID_MAINFRAME_SELECT_ALBUMARTIST,
+    ID_MAINFRAME_SELECT_ALBUMARTISTNAME,
+    ID_MAINFRAME_SELECT_COMPOSER,
+    ID_MAINFRAME_SELECT_COMPOSERNAME,
     ID_MAINFRAME_SELECT_TRACK,
     ID_MAINFRAME_SELECT_YEAR,
     ID_MAINFRAME_SELECT_GENRE,
@@ -254,6 +258,7 @@ enum guCommandIds {
     ID_SONG_BROWSE_GENRE,
     ID_SONG_BROWSE_ARTIST,
     ID_SONG_BROWSE_ALBUMARTIST,
+    ID_SONG_BROWSE_COMPOSER,
     ID_SONG_BROWSE_ALBUM,
     ID_SONG_SELECTNAME,
     ID_SONG_EDIT_COLUMN,
@@ -281,6 +286,8 @@ enum guCommandIds {
     ID_PLAYER_PLAYLIST_SELECT_TITLE,
     ID_PLAYER_PLAYLIST_SELECT_ARTIST,
     ID_PLAYER_PLAYLIST_SELECT_ALBUM,
+    ID_PLAYER_PLAYLIST_SELECT_ALBUMARTIST,
+    ID_PLAYER_PLAYLIST_SELECT_COMPOSER,
     ID_PLAYER_PLAYLIST_SELECT_GENRE,
     ID_PLAYER_PLAYLIST_SELECT_YEAR,
     ID_PLAYER_PLAYLIST_DELETE_LIBRARY,
