@@ -328,6 +328,8 @@ class guMainFrame : public wxFrame
 
     void                            OnSelectTrack( wxCommandEvent &event );
     void                            OnSelectAlbum( wxCommandEvent &event );
+    void                            OnSelectAlbumArtist( wxCommandEvent &event );
+    void                            OnSelectComposer( wxCommandEvent &event );
     void                            OnSelectArtist( wxCommandEvent &event );
     void                            OnSelectYear( wxCommandEvent &event );
     void                            OnSelectGenre( wxCommandEvent &event );
